<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/search_cate"
        android:title="@string/search_cate"
        app:showAsAction="never"/>
    <item android:id="@+id/search_name"
        android:title="@string/search_name"
        app:showAsAction="never"/>
    <item android:id="@+id/submit"
        android:title="@string/submit"
        app:showAsAction="never"/>
    <item android:id="@+id/won"
        android:title="@string/won"
        app:showAsAction="never"/>
    <item android:id="@+id/biddings"
        android:title="@string/biddings"
        app:showAsAction="never"/>
    <item android:id="@+id/viewall"
        android:title="View all"
        app:showAsAction="never"/>

</menu>
