<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/activity_vertical_margin"
    android:background="#003456"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_splash" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="40dp"
        android:text="@string/welcome"/>

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/signup"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:background="@drawable/btn_blue_selector"
        android:onClick="SignUp"/>

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:text="@string/signin"
        android:background="@drawable/btn_blue_selector"
        android:onClick="SignIn"/>

</LinearLayout>